# string-algos

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: BreakLine.cpp  BreakLine.h  CMakeLists.txt  Stringer.cpp  Stringer.h  ToLower.cpp  ToLower.h  ToUpper.cpp  ToUpper.h  Tool.cpp  breakln.pl
tests/: CMakeLists.txt  TestBreakLine.cpp  TestStringer.cpp  TestToLower.cpp  TestToUpper.cpp
